--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+# DataSource
+spring.datasource.url=jdbc:mysql://localhost/boot?useUnicode=yes&characterEncoding=utf-8
+spring.datasource.username=root
+spring.datasource.password=qhdrndkQk1
+# JPA & Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.database=MySQL
+spring.jpa.show-sql=true
+# Log
 logging.file=logs/app.log
+# JSON
+spring.jackson.serialization.indent_output=true
+spring.jackson.serialization.fail_on_empty_beans=false
+server.port=9090
