--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # DataSource
-spring.datasource.url=jdbc:mysql://localhost/boot?useUnicode=yes&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://localhost/practice_dev_db?useUnicode=yes&characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=qhdrndkQk1
 # JPA & Hibernate
